cmd/gc/y.output
Terminals unused in grammar

   LIGNORE


Grammar

    0 $accept: file $end

    1 file: loadsys package imports xdcl_list

    2 package: /* empty */
    3        | LPACKAGE sym ';'

    4 $@1: /* empty */

    5 loadsys: $@1 import_package import_there

    6 imports: /* empty */
    7        | imports import ';'

    8 import: LIMPORT import_stmt
    9       | LIMPORT '(' import_stmt_list osemi ')'
   10       | LIMPORT '(' ')'

   11 import_stmt: import_here import_package import_there

   12 import_stmt_list: import_stmt
   13                 | import_stmt_list ';' import_stmt

   14 import_here: LLITERAL
   15            | sym LLITERAL
   16            | '.' LLITERAL

   17 import_package: LPACKAGE LNAME import_safety ';'

   18 import_safety: /* empty */
   19              | LNAME

   20 $@2: /* empty */

   21 import_there: $@2 hidden_import_list '$' '$'

   22 xdcl: /* empty */
   23     | common_dcl
   24     | xfndcl
   25     | non_dcl_stmt
   26     | error

   27 common_dcl: LVAR vardcl
   28           | LVAR '(' vardcl_list osemi ')'
   29           | LVAR '(' ')'
   30           | lconst constdcl
   31           | lconst '(' constdcl osemi ')'
   32           | lconst '(' constdcl ';' constdcl_list osemi ')'
   33           | lconst '(' ')'
   34           | LTYPE typedcl
   35           | LTYPE '(' typedcl_list osemi ')'
   36           | LTYPE '(' ')'

   37 lconst: LCONST

   38 vardcl: dcl_name_list ntype
   39       | dcl_name_list ntype '=' expr_list
   40       | dcl_name_list '=' expr_list

   41 constdcl: dcl_name_list ntype '=' expr_list
   42         | dcl_name_list '=' expr_list

   43 constdcl1: constdcl
   44          | dcl_name_list ntype
   45          | dcl_name_list

   46 typedclname: sym

   47 typedcl: typedclname ntype

   48 simple_stmt: expr
   49            | expr LASOP expr
   50            | expr_list '=' expr_list
   51            | expr_list LCOLAS expr_list
   52            | expr LINC
   53            | expr LDEC

   54 case: LCASE expr_or_type_list ':'
   55     | LCASE expr_or_type_list '=' expr ':'
   56     | LCASE expr_or_type_list LCOLAS expr ':'
   57     | LDEFAULT ':'

   58 $@3: /* empty */

   59 compound_stmt: '{' $@3 stmt_list '}'

   60 $@4: /* empty */

   61 caseblock: case $@4 stmt_list

   62 caseblock_list: /* empty */
   63               | caseblock_list caseblock

   64 $@5: /* empty */

   65 loop_body: LBODY $@5 stmt_list '}'

   66 range_stmt: expr_list '=' LRANGE expr
   67           | expr_list LCOLAS LRANGE expr

   68 for_header: osimple_stmt ';' osimple_stmt ';' osimple_stmt
   69           | osimple_stmt
   70           | range_stmt

   71 for_body: for_header loop_body

   72 $@6: /* empty */

   73 for_stmt: LFOR $@6 for_body

   74 if_header: osimple_stmt
   75          | osimple_stmt ';' osimple_stmt

   76 $@7: /* empty */

   77 $@8: /* empty */

   78 $@9: /* empty */

   79 if_stmt: LIF $@7 if_header $@8 loop_body $@9 else

   80 else: /* empty */
   81     | LELSE if_stmt
   82     | LELSE compound_stmt

   83 $@10: /* empty */

   84 $@11: /* empty */

   85 switch_stmt: LSWITCH $@10 if_header $@11 LBODY caseblock_list '}'

   86 $@12: /* empty */

   87 select_stmt: LSELECT $@12 LBODY caseblock_list '}'

   88 expr: uexpr
   89     | expr LOROR expr
   90     | expr LANDAND expr
   91     | expr LEQ expr
   92     | expr LNE expr
   93     | expr LLT expr
   94     | expr LLE expr
   95     | expr LGE expr
   96     | expr LGT expr
   97     | expr '+' expr
   98     | expr '-' expr
   99     | expr '|' expr
  100     | expr '^' expr
  101     | expr '*' expr
  102     | expr '/' expr
  103     | expr '%' expr
  104     | expr '&' expr
  105     | expr LANDNOT expr
  106     | expr LLSH expr
  107     | expr LRSH expr
  108     | expr LCOMM expr

  109 uexpr: pexpr
  110      | '*' uexpr
  111      | '&' uexpr
  112      | '+' uexpr
  113      | '-' uexpr
  114      | '!' uexpr
  115      | '~' uexpr
  116      | '^' uexpr
  117      | LCOMM uexpr

  118 pseudocall: pexpr '(' ')'
  119           | pexpr '(' expr_or_type_list ocomma ')'
  120           | pexpr '(' expr_or_type_list LDDD ocomma ')'

  121 pexpr_no_paren: LLITERAL
  122               | name
  123               | pexpr '.' sym
  124               | pexpr '.' '(' expr_or_type ')'
  125               | pexpr '.' '(' LTYPE ')'
  126               | pexpr '[' expr ']'
  127               | pexpr '[' oexpr ':' oexpr ']'
  128               | pseudocall
  129               | convtype '(' expr ')'
  130               | comptype lbrace start_complit braced_keyval_list '}'
  131               | pexpr_no_paren '{' start_complit braced_keyval_list '}'
  132               | '(' expr_or_type ')' '{' start_complit braced_keyval_list '}'
  133               | fnliteral

  134 start_complit: /* empty */

  135 keyval: expr ':' complitexpr

  136 complitexpr: expr
  137            | '{' start_complit braced_keyval_list '}'

  138 pexpr: pexpr_no_paren
  139      | '(' expr_or_type ')'

  140 expr_or_type: expr
  141             | non_expr_type

  142 name_or_type: ntype

  143 lbrace: LBODY
  144       | '{'

  145 new_name: sym

  146 dcl_name: sym

  147 onew_name: /* empty */
  148          | new_name

  149 sym: LNAME
  150    | hidden_importsym
  151    | '?'

  152 hidden_importsym: '@' LLITERAL '.' LNAME

  153 name: sym

  154 labelname: new_name

  155 dotdotdot: LDDD
  156          | LDDD ntype

  157 ntype: recvchantype
  158      | fntype
  159      | othertype
  160      | ptrtype
  161      | dotname
  162      | '(' ntype ')'

  163 non_expr_type: recvchantype
  164              | fntype
  165              | othertype
  166              | '*' non_expr_type

  167 non_recvchantype: fntype
  168                 | othertype
  169                 | ptrtype
  170                 | dotname
  171                 | '(' ntype ')'

  172 convtype: fntype
  173         | othertype

  174 comptype: othertype

  175 fnret_type: recvchantype
  176           | fntype
  177           | othertype
  178           | ptrtype
  179           | dotname

  180 dotname: name
  181        | name '.' sym

  182 othertype: '[' oexpr ']' ntype
  183          | '[' LDDD ']' ntype
  184          | LCHAN non_recvchantype
  185          | LCHAN LCOMM ntype
  186          | LMAP '[' ntype ']' ntype
  187          | structtype
  188          | interfacetype

  189 ptrtype: '*' ntype

  190 recvchantype: LCOMM LCHAN ntype

  191 structtype: LSTRUCT lbrace structdcl_list osemi '}'
  192           | LSTRUCT lbrace '}'

  193 interfacetype: LINTERFACE lbrace interfacedcl_list osemi '}'
  194              | LINTERFACE lbrace '}'

  195 xfndcl: LFUNC fndcl fnbody

  196 fndcl: sym '(' oarg_type_list_ocomma ')' fnres
  197      | '(' oarg_type_list_ocomma ')' sym '(' oarg_type_list_ocomma ')' fnres

  198 hidden_fndcl: hidden_pkg_importsym '(' ohidden_funarg_list ')' ohidden_funres
  199             | '(' hidden_funarg_list ')' sym '(' ohidden_funarg_list ')' ohidden_funres

  200 fntype: LFUNC '(' oarg_type_list_ocomma ')' fnres

  201 fnbody: /* empty */
  202       | '{' stmt_list '}'

  203 fnres: /* empty */
  204      | fnret_type
  205      | '(' oarg_type_list_ocomma ')'

  206 fnlitdcl: fntype

  207 fnliteral: fnlitdcl lbrace stmt_list '}'
  208          | fnlitdcl error

  209 xdcl_list: /* empty */
  210          | xdcl_list xdcl ';'

  211 vardcl_list: vardcl
  212            | vardcl_list ';' vardcl

  213 constdcl_list: constdcl1
  214              | constdcl_list ';' constdcl1

  215 typedcl_list: typedcl
  216             | typedcl_list ';' typedcl

  217 structdcl_list: structdcl
  218               | structdcl_list ';' structdcl

  219 interfacedcl_list: interfacedcl
  220                  | interfacedcl_list ';' interfacedcl

  221 structdcl: new_name_list ntype oliteral
  222          | embed oliteral
  223          | '(' embed ')' oliteral
  224          | '*' embed oliteral
  225          | '(' '*' embed ')' oliteral
  226          | '*' '(' embed ')' oliteral

  227 packname: LNAME
  228         | LNAME '.' sym

  229 embed: packname

  230 interfacedcl: new_name indcl
  231             | packname
  232             | '(' packname ')'

  233 indcl: '(' oarg_type_list_ocomma ')' fnres

  234 arg_type: name_or_type
  235         | sym name_or_type
  236         | sym dotdotdot
  237         | dotdotdot

  238 arg_type_list: arg_type
  239              | arg_type_list ',' arg_type

  240 oarg_type_list_ocomma: /* empty */
  241                      | arg_type_list ocomma

  242 stmt: /* empty */
  243     | compound_stmt
  244     | common_dcl
  245     | non_dcl_stmt
  246     | error

  247 non_dcl_stmt: simple_stmt
  248             | for_stmt
  249             | switch_stmt
  250             | select_stmt
  251             | if_stmt

  252 $@13: /* empty */

  253 non_dcl_stmt: labelname ':' $@13 stmt
  254             | LFALL
  255             | LBREAK onew_name
  256             | LCONTINUE onew_name
  257             | LGO pseudocall
  258             | LDEFER pseudocall
  259             | LGOTO new_name
  260             | LRETURN oexpr_list

  261 stmt_list: stmt
  262          | stmt_list ';' stmt

  263 new_name_list: new_name
  264              | new_name_list ',' new_name

  265 dcl_name_list: dcl_name
  266              | dcl_name_list ',' dcl_name

  267 expr_list: expr
  268          | expr_list ',' expr

  269 expr_or_type_list: expr_or_type
  270                  | expr_or_type_list ',' expr_or_type

  271 keyval_list: keyval
  272            | complitexpr
  273            | keyval_list ',' keyval
  274            | keyval_list ',' complitexpr

  275 braced_keyval_list: /* empty */
  276                   | keyval_list ocomma

  277 osemi: /* empty */
  278      | ';'

  279 ocomma: /* empty */
  280       | ','

  281 oexpr: /* empty */
  282      | expr

  283 oexpr_list: /* empty */
  284           | expr_list

  285 osimple_stmt: /* empty */
  286             | simple_stmt

  287 ohidden_funarg_list: /* empty */
  288                    | hidden_funarg_list

  289 ohidden_structdcl_list: /* empty */
  290                       | hidden_structdcl_list

  291 ohidden_interfacedcl_list: /* empty */
  292                          | hidden_interfacedcl_list

  293 oliteral: /* empty */
  294         | LLITERAL

  295 hidden_import: LIMPORT LNAME LLITERAL ';'
  296              | LVAR hidden_pkg_importsym hidden_type ';'
  297              | LCONST hidden_pkg_importsym '=' hidden_constant ';'
  298              | LCONST hidden_pkg_importsym hidden_type '=' hidden_constant ';'
  299              | LTYPE hidden_pkgtype hidden_type ';'
  300              | LFUNC hidden_fndcl fnbody ';'

  301 hidden_pkg_importsym: hidden_importsym

  302 hidden_pkgtype: hidden_pkg_importsym

  303 hidden_type: hidden_type_misc
  304            | hidden_type_recv_chan
  305            | hidden_type_func

  306 hidden_type_non_recv_chan: hidden_type_misc
  307                          | hidden_type_func

  308 hidden_type_misc: hidden_importsym
  309                 | LNAME
  310                 | '[' ']' hidden_type
  311                 | '[' LLITERAL ']' hidden_type
  312                 | LMAP '[' hidden_type ']' hidden_type
  313                 | LSTRUCT '{' ohidden_structdcl_list '}'
  314                 | LINTERFACE '{' ohidden_interfacedcl_list '}'
  315                 | '*' hidden_type
  316                 | LCHAN hidden_type_non_recv_chan
  317                 | LCHAN '(' hidden_type_recv_chan ')'
  318                 | LCHAN LCOMM hidden_type

  319 hidden_type_recv_chan: LCOMM LCHAN hidden_type

  320 hidden_type_func: LFUNC '(' ohidden_funarg_list ')' ohidden_funres

  321 hidden_funarg: sym hidden_type oliteral
  322              | sym LDDD hidden_type oliteral

  323 hidden_structdcl: sym hidden_type oliteral

  324 hidden_interfacedcl: sym '(' ohidden_funarg_list ')' ohidden_funres
  325                    | hidden_type

  326 ohidden_funres: /* empty */
  327               | hidden_funres

  328 hidden_funres: '(' ohidden_funarg_list ')'
  329              | hidden_type

  330 hidden_literal: LLITERAL
  331               | '-' LLITERAL
  332               | sym

  333 hidden_constant: hidden_literal
  334                | '(' hidden_literal '+' hidden_literal ')'

  335 hidden_import_list: /* empty */
  336                   | hidden_import_list hidden_import

  337 hidden_funarg_list: hidden_funarg
  338                   | hidden_funarg_list ',' hidden_funarg

  339 hidden_structdcl_list: hidden_structdcl
  340                      | hidden_structdcl_list ';' hidden_structdcl

  341 hidden_interfacedcl_list: hidden_interfacedcl
  342                         | hidden_interfacedcl_list ';' hidden_interfacedcl


Terminals, with rules where they appear

$end (0) 0
'!' (33) 114
'$' (36) 21
'%' (37) 103
'&' (38) 104 111
'(' (40) 9 10 28 29 31 32 33 35 36 118 119 120 124 125 129 132 139
    162 171 196 197 198 199 200 205 223 225 226 232 233 317 320 324
    328 334
')' (41) 9 10 28 29 31 32 33 35 36 118 119 120 124 125 129 132 139
    162 171 196 197 198 199 200 205 223 225 226 232 233 317 320 324
    328 334
'*' (42) 101 110 166 189 224 225 226 315
'+' (43) 97 112 334
',' (44) 239 264 266 268 270 273 274 280 338
'-' (45) 98 113 331
'.' (46) 16 123 124 125 152 181 228
'/' (47) 102
':' (58) 54 55 56 57 127 135 253
';' (59) 3 7 13 17 32 68 75 210 212 214 216 218 220 262 278 295 296
    297 298 299 300 340 342
'=' (61) 39 40 41 42 50 55 66 297 298
'?' (63) 151
'@' (64) 152
'[' (91) 126 127 182 183 186 310 311 312
']' (93) 126 127 182 183 186 310 311 312
'^' (94) 100 116
'{' (123) 59 131 132 137 144 202 313 314
'|' (124) 99
'}' (125) 59 65 85 87 130 131 132 137 191 192 193 194 202 207 313 314
'~' (126) 115
error (256) 26 208 246
LLITERAL (258) 14 15 16 121 152 294 295 311 330 331
LASOP (259) 49
LBREAK (260) 255
LCASE (261) 54 55 56
LCHAN (262) 184 185 190 316 317 318 319
LCOLAS (263) 51 56 67
LCONST (264) 37 297 298
LCONTINUE (265) 256
LDDD (266) 120 155 156 183 322
LDEFAULT (267) 57
LDEFER (268) 258
LELSE (269) 81 82
LFALL (270) 254
LFOR (271) 73
LFUNC (272) 195 200 300 320
LGO (273) 257
LGOTO (274) 259
LIF (275) 79
LIMPORT (276) 8 9 10 295
LINTERFACE (277) 193 194 314
LMAP (278) 186 312
LNAME (279) 17 19 149 152 227 228 295 309
LPACKAGE (280) 3 17
LRANGE (281) 66 67
LRETURN (282) 260
LSELECT (283) 87
LSTRUCT (284) 191 192 313
LSWITCH (285) 85
LTYPE (286) 34 35 36 125 299
LVAR (287) 27 28 29 296
LANDAND (288) 90
LANDNOT (289) 105
LBODY (290) 65 85 87 143
LCOMM (291) 108 117 185 190 318 319
LDEC (292) 53
LEQ (293) 91
LGE (294) 95
LGT (295) 96
LIGNORE (296)
LINC (297) 52
LLE (298) 94
LLSH (299) 106
LLT (300) 93
LNE (301) 92
LOROR (302) 89
LRSH (303) 107
NotPackage (304)
NotParen (305)
PreferToRightParen (306)


Nonterminals, with rules where they appear

$accept (76)
    on left: 0
file (77)
    on left: 1, on right: 0
package (78)
    on left: 2 3, on right: 1
loadsys (79)
    on left: 5, on right: 1
$@1 (80)
    on left: 4, on right: 5
imports (81)
    on left: 6 7, on right: 1 7
import (82)
    on left: 8 9 10, on right: 7
import_stmt (83)
    on left: 11, on right: 8 12 13
import_stmt_list (84)
    on left: 12 13, on right: 9 13
import_here (85)
    on left: 14 15 16, on right: 11
import_package (86)
    on left: 17, on right: 5 11
import_safety (87)
    on left: 18 19, on right: 17
import_there (88)
    on left: 21, on right: 5 11
$@2 (89)
    on left: 20, on right: 21
xdcl (90)
    on left: 22 23 24 25 26, on right: 210
common_dcl (91)
    on left: 27 28 29 30 31 32 33 34 35 36, on right: 23 244
lconst (92)
    on left: 37, on right: 30 31 32 33
vardcl (93)
    on left: 38 39 40, on right: 27 211 212
constdcl (94)
    on left: 41 42, on right: 30 31 32 43
constdcl1 (95)
    on left: 43 44 45, on right: 213 214
typedclname (96)
    on left: 46, on right: 47
typedcl (97)
    on left: 47, on right: 34 215 216
simple_stmt (98)
    on left: 48 49 50 51 52 53, on right: 247 286
case (99)
    on left: 54 55 56 57, on right: 61
compound_stmt (100)
    on left: 59, on right: 82 243
$@3 (101)
    on left: 58, on right: 59
caseblock (102)
    on left: 61, on right: 63
$@4 (103)
    on left: 60, on right: 61
caseblock_list (104)
    on left: 62 63, on right: 63 85 87
loop_body (105)
    on left: 65, on right: 71 79
$@5 (106)
    on left: 64, on right: 65
range_stmt (107)
    on left: 66 67, on right: 70
for_header (108)
    on left: 68 69 70, on right: 71
for_body (109)
    on left: 71, on right: 73
for_stmt (110)
    on left: 73, on right: 248
$@6 (111)
    on left: 72, on right: 73
if_header (112)
    on left: 74 75, on right: 79 85
if_stmt (113)
    on left: 79, on right: 81 251
$@7 (114)
    on left: 76, on right: 79
$@8 (115)
    on left: 77, on right: 79
$@9 (116)
    on left: 78, on right: 79
else (117)
    on left: 80 81 82, on right: 79
switch_stmt (118)
    on left: 85, on right: 249
$@10 (119)
    on left: 83, on right: 85
$@11 (120)
    on left: 84, on right: 85
select_stmt (121)
    on left: 87, on right: 250
$@12 (122)
    on left: 86, on right: 87
expr (123)
    on left: 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104
    105 106 107 108, on right: 48 49 52 53 55 56 66 67 89 90 91 92
    93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 126 129
    135 136 140 267 268 282
uexpr (124)
    on left: 109 110 111 112 113 114 115 116 117, on right: 88 110
    111 112 113 114 115 116 117
pseudocall (125)
    on left: 118 119 120, on right: 128 257 258
pexpr_no_paren (126)
    on left: 121 122 123 124 125 126 127 128 129 130 131 132 133, on right:
    131 138
start_complit (127)
    on left: 134, on right: 130 131 132 137
keyval (128)
    on left: 135, on right: 271 273
complitexpr (129)
    on left: 136 137, on right: 135 272 274
pexpr (130)
    on left: 138 139, on right: 109 118 119 120 123 124 125 126 127
expr_or_type (131)
    on left: 140 141, on right: 124 132 139 269 270
name_or_type (132)
    on left: 142, on right: 234 235
lbrace (133)
    on left: 143 144, on right: 130 191 192 193 194 207
new_name (134)
    on left: 145, on right: 148 154 230 259 263 264
dcl_name (135)
    on left: 146, on right: 265 266
onew_name (136)
    on left: 147 148, on right: 255 256
sym (137)
    on left: 149 150 151, on right: 3 15 46 123 145 146 153 181 196
    197 199 228 235 236 321 322 323 324 332
hidden_importsym (138)
    on left: 152, on right: 150 301 308
name (139)
    on left: 153, on right: 122 180 181
labelname (140)
    on left: 154, on right: 253
dotdotdot (141)
    on left: 155 156, on right: 236 237
ntype (142)
    on left: 157 158 159 160 161 162, on right: 38 39 41 44 47 142
    156 162 171 182 183 185 186 189 190 221
non_expr_type (143)
    on left: 163 164 165 166, on right: 141 166
non_recvchantype (144)
    on left: 167 168 169 170 171, on right: 184
convtype (145)
    on left: 172 173, on right: 129
comptype (146)
    on left: 174, on right: 130
fnret_type (147)
    on left: 175 176 177 178 179, on right: 204
dotname (148)
    on left: 180 181, on right: 161 170 179
othertype (149)
    on left: 182 183 184 185 186 187 188, on right: 159 165 168 173
    174 177
ptrtype (150)
    on left: 189, on right: 160 169 178
recvchantype (151)
    on left: 190, on right: 157 163 175
structtype (152)
    on left: 191 192, on right: 187
interfacetype (153)
    on left: 193 194, on right: 188
xfndcl (154)
    on left: 195, on right: 24
fndcl (155)
    on left: 196 197, on right: 195
hidden_fndcl (156)
    on left: 198 199, on right: 300
fntype (157)
    on left: 200, on right: 158 164 167 172 176 206
fnbody (158)
    on left: 201 202, on right: 195 300
fnres (159)
    on left: 203 204 205, on right: 196 197 200 233
fnlitdcl (160)
    on left: 206, on right: 207 208
fnliteral (161)
    on left: 207 208, on right: 133
xdcl_list (162)
    on left: 209 210, on right: 1 210
vardcl_list (163)
    on left: 211 212, on right: 28 212
constdcl_list (164)
    on left: 213 214, on right: 32 214
typedcl_list (165)
    on left: 215 216, on right: 35 216
structdcl_list (166)
    on left: 217 218, on right: 191 218
interfacedcl_list (167)
    on left: 219 220, on right: 193 220
structdcl (168)
    on left: 221 222 223 224 225 226, on right: 217 218
packname (169)
    on left: 227 228, on right: 229 231 232
embed (170)
    on left: 229, on right: 222 223 224 225 226
interfacedcl (171)
    on left: 230 231 232, on right: 219 220
indcl (172)
    on left: 233, on right: 230
arg_type (173)
    on left: 234 235 236 237, on right: 238 239
arg_type_list (174)
    on left: 238 239, on right: 239 241
oarg_type_list_ocomma (175)
    on left: 240 241, on right: 196 197 200 205 233
stmt (176)
    on left: 242 243 244 245 246, on right: 253 261 262
non_dcl_stmt (177)
    on left: 247 248 249 250 251 253 254 255 256 257 258 259 260, on right:
    25 245
$@13 (178)
    on left: 252, on right: 253
stmt_list (179)
    on left: 261 262, on right: 59 61 65 202 207 262
new_name_list (180)
    on left: 263 264, on right: 221 264
dcl_name_list (181)
    on left: 265 266, on right: 38 39 40 41 42 44 45 266
expr_list (182)
    on left: 267 268, on right: 39 40 41 42 50 51 66 67 268 284
expr_or_type_list (183)
    on left: 269 270, on right: 54 55 56 119 120 270
keyval_list (184)
    on left: 271 272 273 274, on right: 273 274 276
braced_keyval_list (185)
    on left: 275 276, on right: 130 131 132 137
osemi (186)
    on left: 277 278, on right: 9 28 31 32 35 191 193
ocomma (187)
    on left: 279 280, on right: 119 120 241 276
oexpr (188)
    on left: 281 282, on right: 127 182
oexpr_list (189)
    on left: 283 284, on right: 260
osimple_stmt (190)
    on left: 285 286, on right: 68 69 74 75
ohidden_funarg_list (191)
    on left: 287 288, on right: 198 199 320 324 328
ohidden_structdcl_list (192)
    on left: 289 290, on right: 313
ohidden_interfacedcl_list (193)
    on left: 291 292, on right: 314
oliteral (194)
    on left: 293 294, on right: 221 222 223 224 225 226 321 322 323
hidden_import (195)
    on left: 295 296 297 298 299 300, on right: 336
hidden_pkg_importsym (196)
    on left: 301, on right: 198 296 297 298 302
hidden_pkgtype (197)
    on left: 302, on right: 299
hidden_type (198)
    on left: 303 304 305, on right: 296 298 299 310 311 312 315 318
    319 321 322 323 325 329
hidden_type_non_recv_chan (199)
    on left: 306 307, on right: 316
hidden_type_misc (200)
    on left: 308 309 310 311 312 313 314 315 316 317 318, on right:
    303 306
hidden_type_recv_chan (201)
    on left: 319, on right: 304 317
hidden_type_func (202)
    on left: 320, on right: 305 307
hidden_funarg (203)
    on left: 321 322, on right: 337 338
hidden_structdcl (204)
    on left: 323, on right: 339 340
hidden_interfacedcl (205)
    on left: 324 325, on right: 341 342
ohidden_funres (206)
    on left: 326 327, on right: 198 199 320 324
hidden_funres (207)
    on left: 328 329, on right: 327
hidden_literal (208)
    on left: 330 331 332, on right: 333 334
hidden_constant (209)
    on left: 333 334, on right: 297 298
hidden_import_list (210)
    on left: 335 336, on right: 21 336
hidden_funarg_list (211)
    on left: 337 338, on right: 199 288 338
hidden_structdcl_list (212)
    on left: 339 340, on right: 290 340
hidden_interfacedcl_list (213)
    on left: 341 342, on right: 292 342


state 0

    0 $accept: . file $end

    $default  reduce using rule 4 ($@1)

    file     go to state 1
    loadsys  go to state 2
    $@1      go to state 3


state 1

    0 $accept: file . $end

    $end  shift, and go to state 4


state 2

    1 file: loadsys . package imports xdcl_list

    LPACKAGE  shift, and go to state 5

    $default  reduce using rule 2 (package)

    package  go to state 6


state 3

    5 loadsys: $@1 . import_package import_there

    LPACKAGE  shift, and go to state 7

    import_package  go to state 8


state 4

    0 $accept: file $end .

    $default  accept


state 5

    3 package: LPACKAGE . sym ';'

    LNAME  shift, and go to state 9
    '?'    shift, and go to state 10
    '@'    shift, and go to state 11

    sym               go to state 12
    hidden_importsym  go to state 13


state 6

    1 file: loadsys package . imports xdcl_list

    $default  reduce using rule 6 (imports)

    imports  go to state 14


state 7

   17 import_package: LPACKAGE . LNAME import_safety ';'

    LNAME  shift, and go to state 15


state 8

    5 loadsys: $@1 import_package . import_there

    $default  reduce using rule 20 ($@2)

    import_there  go to state 16
    $@2           go to state 17


state 9

  149 sym: LNAME .

    $default  reduce using rule 149 (sym)


state 10

  151 sym: '?' .

    $default  reduce using rule 151 (sym)


state 11

  152 hidden_importsym: '@' . LLITERAL '.' LNAME

    LLITERAL  shift, and go to state 18


state 12

    3 package: LPACKAGE sym . ';'

    ';'  shift, and go to state 19


state 13

  150 sym: hidden_importsym .

    $default  reduce using rule 150 (sym)


state 14

    1 file: loadsys package imports . xdcl_list
    7 imports: imports . import ';'

    LIMPORT  shift, and go to state 20

    $default  reduce using rule 209 (xdcl_list)

    import     go to state 21
    xdcl_list  go to state 22


state 15

   17 import_package: LPACKAGE LNAME . import_safety ';'

    LNAME  shift, and go to state 23

    $default  reduce using rule 18 (import_safety)

    import_safety  go to state 24


state 16

    5 loadsys: $@1 import_package import_there .

    $default  reduce using rule 5 (loadsys)


state 17

   21 import_there: $@2 . hidden_import_list '$' '$'

    $default  reduce using rule 335 (hidden_import_list)

    hidden_import_list  go to state 25


state 18

  152 hidden_importsym: '@' LLITERAL . '.' LNAME

    '.'  shift, and go to state 26


state 19

    3 package: LPACKAGE sym ';' .

    $default  reduce using rule 3 (package)


state 20

    8 import: LIMPORT . import_stmt
    9       | LIMPORT . '(' import_stmt_list osemi ')'
   10       | LIMPORT . '(' ')'

    LLITERAL  shift, and go to state 27
    LNAME     shift, and go to state 9
    '('       shift, and go to state 28
    '.'       shift, and go to state 29
    '?'       shift, and go to state 10
    '@'       shift, and go to state 11

    import_stmt       go to state 30
    import_here       go to state 31
    sym               go to state 32
    hidden_importsym  go to state 13


state 21

    7 imports: imports import . ';'

    ';'  shift, and go to state 33


state 22

    1 file: loadsys package imports xdcl_list .
  210 xdcl_list: xdcl_list . xdcl ';'

    error       shift, and go to state 34
    LLITERAL    shift, and go to state 35
    LBREAK      shift, and go to state 36
    LCHAN       shift, and go to state 37
    LCONST      shift, and go to state 38
    LCONTINUE   shift, and go to state 39
    LDEFER      shift, and go to state 40
    LFALL       shift, and go to state 41
    LFOR        shift, and go to state 42
    LFUNC       shift, and go to state 43
    LGO         shift, and go to state 44
    LGOTO       shift, and go to state 45
    LIF         shift, and go to state 46
    LINTERFACE  shift, and go to state 47
    LMAP        shift, and go to state 48
    LNAME       shift, and go to state 9
    LRETURN     shift, and go to state 49
    LSELECT     shift, and go to state 50
    LSTRUCT     shift, and go to state 51
    LSWITCH     shift, and go to state 52
    LTYPE       shift, and go to state 53
    LVAR        shift, and go to state 54
    LCOMM       shift, and go to state 55
    '+'         shift, and go to state 56
    '-'         shift, and go to state 57
    '^'         shift, and go to state 58
    '*'         shift, and go to state 59
    '&'         shift, and go to state 60
    '('         shift, and go to state 61
    '!'         shift, and go to state 62
    '~'         shift, and go to state 63
    '['         shift, and go to state 64
    '?'         shift, and go to state 10
    '@'         shift, and go to state 11

    $end  reduce using rule 1 (file)
    ';'   reduce using rule 22 (xdcl)

    xdcl              go to state 65
    common_dcl        go to state 66
    lconst            go to state 67
    simple_stmt       go to state 68
    for_stmt          go to state 69
    if_stmt           go to state 70
    switch_stmt       go to state 71
    select_stmt       go to state 72
    expr              go to state 73
    uexpr             go to state 74
    pseudocall        go to state 75
    pexpr_no_paren    go to state 76
    pexpr             go to state 77
    new_name          go to state 78
    sym               go to state 79
    hidden_importsym  go to state 13
    name              go to state 80
    labelname         go to state 81
    convtype          go to state 82
    comptype          go to state 83
    othertype         go to state 84
    structtype        go to state 85
    interfacetype     go to state 86
    xfndcl            go to state 87
    fntype            go to state 88
    fnlitdcl          go to state 89
    fnliteral         go to state 90
    non_dcl_stmt      go to state 91
    expr_list         go to state 92


state 23

   19 import_safety: LNAME .

    $default  reduce using rule 19 (import_safety)


state 24

   17 import_package: LPACKAGE LNAME import_safety . ';'

    ';'  shift, and go to state 93


state 25

   21 import_there: $@2 hidden_import_list . '$' '$'
  336 hidden_import_list: hidden_import_list . hidden_import

    LCONST   shift, and go to state 94
    LFUNC    shift, and go to state 95
    LIMPORT  shift, and go to state 96
    LTYPE    shift, and go to state 97
    LVAR     shift, and go to state 98
    '$'      shift, and go to state 99

    hidden_import  go to state 100


state 26

  152 hidden_importsym: '@' LLITERAL '.' . LNAME

    LNAME  shift, and go to state 101


state 27

   14 import_here: LLITERAL .

    $default  reduce using rule 14 (import_here)


state 28

    9 import: LIMPORT '(' . import_stmt_list osemi ')'
   10       | LIMPORT '(' . ')'

    LLITERAL  shift, and go to state 27
    LNAME     shift, and go to state 9
    ')'       shift, and go to state 102
    '.'       shift, and go to state 29
    '?'       shift, and go to state 10
    '@'       shift, and go to state 11

    import_stmt       go to state 103
    import_stmt_list  go to state 104
    import_here       go to state 31
    sym               go to state 32
    hidden_importsym  go to state 13


state 29

   16 import_here: '.' . LLITERAL

    LLITERAL  shift, and go to state 105


state 30

    8 import: LIMPORT import_stmt .

    $default  reduce using rule 8 (import)


state 31

   11 import_stmt: import_here . import_package import_there

    LPACKAGE  shift, and go to state 7

    import_package  go to state 106


state 32

   15 import_here: sym . LLITERAL

    LLITERAL  shift, and go to state 107


state 33

    7 imports: imports import ';' .

    $default  reduce using rule 7 (imports)


state 34

   26 xdcl: error .

    $default  reduce using rule 26 (xdcl)


state 35

  121 pexpr_no_paren: LLITERAL .

    $default  reduce using rule 121 (pexpr_no_paren)


state 36

  255 non_dcl_stmt: LBREAK . onew_name

    LNAME  shift, and go to state 9
    '?'    shift, and go to state 10
    '@'    shift, and go to state 11

    $default  reduce using rule 147 (onew_name)

    new_name          go to state 108
    onew_name         go to state 109
    sym               go to state 110
    hidden_importsym  go to state 13


state 37

  184 othertype: LCHAN . non_recvchantype
  185          | LCHAN . LCOMM ntype

    LCHAN       shift, and go to state 37
    LFUNC       shift, and go to state 111
    LINTERFACE  shift, and go to state 47
    LMAP        shift, and go to state 48
    LNAME       shift, and go to state 9
    LSTRUCT     shift, and go to state 51
    LCOMM       shift, and go to state 112
    '*'         shift, and go to state 113
    '('         shift, and go to state 114
    '['         shift, and go to state 64
    '?'         shift, and go to state 10
    '@'         shift, and go to state 11

    sym               go to state 115
    hidden_importsym  go to state 13
    name              go to state 116
    non_recvchantype  go to state 117
    dotname           go to state 118
    othertype         go to state 119
    ptrtype           go to state 120
    structtype        go to state 85
    interfacetype     go to state 86
    fntype            go to state 121


state 38

   37 lconst: LCONST .

    $default  reduce using rule 37 (lconst)


state 39

  256 non_dcl_stmt: LCONTINUE . onew_name
